Revision history for Data-Collector

0.06
        * Resolved GH #8.
        * Refactored Info::IFaces using List::Util::first.
        * Adding List::Util to prereqs.

0.05    11.04.10
        * -- API Change: --
          register_keys   -> register,
          unregister_keys -> unregister,
        * Resolving GH #2, double collection now possible!
        * Renamed "script" folder to "bin", to have the app installed.
        * Updating prereqs (adding LWP::UserAgent)

0.04    08.04.10
        * Fixed file_exists() in Engine.pm
        * Adding Data::Collector::IFaces
        * Resolving GH #9, adding run_if_exists to Engine.pm
        * Data::Collector::Commands now has "ifconfig"
        * Data::Collector::Commands now has "netstat"
        * Data::Collector::Commands now has "ifconfig" (only RH supported)
        * Some speed improvements

0.03    07.04.10
        * Script should be named "data-collector", not "data-scanner"
        * Adding Data::Collector::Commands role
        * Fixed tests by overriding ExternalIP
        * Fixed parsing IP from HTML in ExternalIP

0.02    07.04.10
        * Fixed bug disallowing multiple Infos
        * Adding Data::Collector::Engine::Local
        * Adding Data::Collector::Info::CPU
        * Adding Data::Collector::Info::OS, only CentOS so far
        * Adding Data::Collector::Info::ExternalIP
        * Adding file_exists to Engine.pm base class
        * Correct POD section names for Infos

0.01    06.04.10
        First version, so many features already included... tsk tsk
